Test path inside loop - fix